# OCanren

./: .gitignore  Makefile  OCanren.opam  README.md  dune  dune-project  test.sh
camlp5/: dune  pa_minikanren.ml
config/: discover.ml  dune  dune.runtest.tpl  dune.tests.diff.tpl  dune.tests.log.tpl  dune.tests.tpl  dunegen.ml
ppx/: dune
regression/: dune  dune.tests.diff.gen  dune.tests.log.gen  test.sh  test002sort.ml  test005.ml  test011.ml  test013.ml  test017eigen.ml  test017listener.ml  test017tabling.ml  test018env.ml  test018negation.ml  test019negation.ml  test020eigen.ml  tester.ml
samples/: Makefile  holist.ml  ski.ml  sorting.ml
src/: MiniKanren.ml  MiniKanren.mli  MiniKanren.mllib  MiniKanrenCore.ml  MiniKanrenCore.mli  MiniKanrenStd.ml  MiniKanrenStd.mli  MiniKanrenUtils.ml  MiniKanrenUtils.mli  OCanren.ml  dune
src/core/: Core.ml  Core.mli  Logic.ml  Logic.mli  Stream.ml  Subst.ml  Subst.mli
src/std/: Pair.ml  Pair.mli
