(executable
  (name discover)
  (modules Discover)
  (libraries dune.configurator)
)

(executable
  (name dunegen)
  (modules Dunegen)
  (libraries str)
)

(rule
  (targets camlp5-flags gt-flags logger-flags)
  (action (run ./discover.exe))
)

(rule
  (targets dune.tests.gen)
  (deps dune.tests.tpl dune.runtest.tpl (source_tree ../regression))
  (mode (promote-into ../regression))
  (action (run ./dunegen.exe %{project_root}))
)
