(executable
  (name discover)
  (modules Discover)
  (libraries str dune.configurator)
  (flags (:standard -warn-error -A))
)

(executable
  (name dunegen)
  (modules Dunegen)
  (libraries str)
)

(rule
  (targets camlp5-flags.cfg gt-flags.cfg logger-flags.cfg)
  (action (run ./discover.exe -all-flags))
)

(rule
  (targets tests.txt tests.dune)
  (deps tests.dune.tpl (source_tree ../regression))
  (mode (promote-into ../regression))
  (action (run ./discover.exe -tests -tests-dune -tests-dir %{project_root}/regression))
)

(rule
  (targets dune.tests.gen)
  (deps dune.tests.tpl dune.runtest.tpl (source_tree ../regression))
  (mode (promote-into ../regression))
  (action (run ./dunegen.exe %{project_root}))
)
