(executables
  (names
    test000
;    test001
;    test002sort
;    test004
;    test005
;    test006
;    test007
;    test009
;    test010
;    test011
;    test013
;    test014
;    test015runaway
;    test016sorto
;    test017tabling
;    test018prjc
;    test019tablingCache
;    test020
  )
  (libraries GT OCanren OCanren.syntax)
  (flags (:standard -warn-error -A -rectypes))
  (preprocess
    (action
      (run camlp5
        %{read-lines:../config/camlp5-flags}
        %{read-lines:../config/gt-flags}
        %{read-lines:../config/logger-flags}
        %{workspace_root}/camlp5/pa_ocanren.cma
        %{input-file})
    )
  )
  (preprocessor_deps (file %{workspace_root}/camlp5/pa_ocanren.cma))
)

(rule
  (alias tests)
  (action (run ./test000.exe))
)

;(include dune.tests.log.gen)
;(include dune.tests.diff.gen)